added solution hw-10
